[package]
name = "deadpool-surrealdb"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Daniil Zavrin <hanamik0@proton.me>"]
description = "Dead simple async pool for SurrealDB"
keywords = ["async", "database", "pool", "surrealdb"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sengokudaikon/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rt_tokio_1"]
rt_tokio_1 = ["deadpool/rt_tokio_1"]
rt_async-std_1 = ["deadpool/rt_async-std_1"]
serde = ["deadpool/serde", "dep:serde"]

[dependencies]
deadpool = { path = "..", version = "0.12.0", default-features = false, features = ["managed"] }
deadpool-runtime = { path = "../runtime", version = "0.1.4" }
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.9"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
